--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,3 +17,8 @@
     ]
   }
 }
+
+
+// TypeScript intellisense is disabled on template. To enable, configure `"jsx": "preserve"` in the `"compilerOptions"` 
+// property of tsconfig or jsconfig.
+//  To disable this prompt instead, configure `"experimentalDisableTemplateSupport": true` in `"vueCompilerOptions"` property.volar
